--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -6,13 +6,12 @@ buildscript {
     dependencies {
         classpath(
                 //To be able to use the spring-boot plugin
-                'org.springframework.boot:spring-boot-gradle-plugin:2.1.0.RELEASE'
+                'org.springframework.boot:spring-boot-gradle-plugin:2.1.0.RELEASE' //Changed version to match OpFab
         )
     }
 }
 
 apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 repositories {
@@ -30,11 +29,6 @@ repositories {
     maven { url "https://plugins.gradle.org/m2/" }
 }
 
-bootJar {
-    baseName = 'user-service'
-    version =  '0.0.1-SNAPSHOT'
-}
-
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -46,11 +40,9 @@ dependencyManagement {
 
 dependencies {
     compile (
-            'org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE',
             'org.springframework.cloud:spring-cloud-starter-bus-amqp',
             'org.projectlombok:lombok:1.18.2',
-            'org.slf4j:slf4j-api:1.7.25',
-            project(':tools') //To share event definition
+            'org.slf4j:slf4j-api:1.7.25'
     )
     testCompile(
             'org.junit.jupiter:junit-jupiter-api:5.3.1',
@@ -67,3 +59,11 @@ test {
         events "passed", "skipped", "failed"
     }
 }
+
+/* Explanations regarding Junit dependencies
+https://github.com/junit-team/junit5-samples/blob/r5.3.2/junit5-jupiter-starter-gradle/build.gradle
+https://junit.org/junit5/docs/current/user-guide/#dependency-metadata
+
+https://www.baeldung.com/junit-5-migration
+*/
+
